// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WithRenderProps 1`] = `
<div>
  <div
    style={
      Object {
        "backgroundColor": "cornflowerblue",
      }
    }
  >
    Today's Date: 
    5/2 4:20
  </div>
  <div />
</div>
`;

exports[`WithVariants 1`] = `
<div>
  <div
    style={
      Object {
        "backgroundColor": "coral",
      }
    }
  >
    DisplayName: 
    ExampleComponent
     Variant: 
    0
     Static Variant Count: 
    3
  </div>
  <div
    style={
      Object {
        "backgroundColor": "turquoise",
      }
    }
  >
    DisplayName: 
    ExampleComponent1
     Variant: 
    1
  </div>
  <div
    style={
      Object {
        "backgroundColor": "cornsilk",
      }
    }
  >
    DisplayName: 
    ExampleComponent2
     Variant: 
    2
  </div>
  <div />
</div>
`;
